--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,176 @@
-.background{
-    width:100%;
-    height: auto;
-    opacity: 1;
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
+html,
+body {
+    width: 100%;
+    height: 100%;
+    background: #ebebeb;
+}
 
+body {
+    margin-top: 70px;
+
+}
+
+/*Navigator*/
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 70px;
+    width: 100%;
+    background-color: #171217;
+    z-index: 10;
+}
 
 nav li {
-	float:left;
-	list-style: none;
+    float: left;
+    list-style: none;
+    font-family: arial;
+    padding: 20px 25px 20px 25px;
+        right: 0px;
+
+
 }
-#face{
-    border-radius: 600px;
+
+nav li a {
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 0 30px;
+    margin: 10 0 0 0;
+    color: #cccccc;
+    text-shadow: 0 1px 0 gray;
+}
+
+nav li a:hover {
+    color: #ebebeb;
+}
+
+/*Background-foto*/
+
+#img-background-1 {
+    position: relative;
+    width: 100%;
+    height: auto;
+    opacity: 0.6;
+}
+
+#img-background h1 {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    text-align: center;
+    right: 0;
+    font-size: 100px;
+    top: 300px;
+}
+
+#img-background h2 {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    text-align: center;
+
+    font-size: 60px;
+    top: 700px;
+}
+
+#background-social {
+    position: absolute;
+    top: 800px;
+    left: 50%;
+    margin-left: -292px;
+}
+
+.social-icons {
+    width: 50px;
+    height: 50px;
+    opacity: 0.8;
+    margin: 15px 15px 15px 15px;
+}
+
+/*About*/
+
+
+h2 {
+    text-align: center;
+    font-family: arial;
+    font-size: 45px;
+    margin: 30px 30px 30px 30px;
+}
+
+#about-left-column div {
+    width: 250px;
+    margin: 10px 10px 10px 10px;
+}
+
+
+
+
+
+#face {
+    border-radius: 300px;
+    width: 252px;
+    height: 252px;
+}
+
+
+
+/*LET'S TALK ABOUT YOUR NEW PROJECT*/
+
+#get-in-touch {
+    background-color: black;
+    height: 325px;
+    width: 100%;
+}
+#get-in-touch h2 {
+    padding-top: 100px;
+    font-family: inherit;
+    color: #cccccc;
+}
+button {
+    border-color:#cccccc;
+    padding: 18px 27px;
+    font-size: 19px;
+    color: #cccccc;
+    border-radius: 0px;
+    background: black;
+    border: 3px solid
+}
+button:hover {
+    border-color:#cccccc;
+    padding: 18px 27px;
+    font-size: 19px;
+    color: black;
+    border-radius: 0px;
+    background: #cccccc;
+    border: 3px solid;
+    
+}
+
+/*Skills*/
+.skills{
+    display:inline-block;
+    width: 100px;
+    height:100px;
+}
+.skills img{
+
+    width: 100px;
+    height: 100px;
+    
+}
+
+.skills p{
+    font-family: arial;
+    font-size: 20px;
+    text-align: center;
 }
