--- a/css/index.css
+++ b/css/index.css
@@ -15,9 +15,36 @@ body {
 
 }
 
-h2 {
+
+.titilium-white-h2 {
     text-align: center;
+    font-size: 38px;
+    color: #ffffff;
+    font-style: normal;
+    font-family: 'Titillium Web', sans-serif;
 }
+
+.lato-blue-h2 {
+    text-align: center;
+    font-size: 45px;
+    color: #2c3e50;
+    font-style: normal;
+    font-family: 'Lato', sans-serif;
+}
+
+.titilium-blue-h3 {
+    color: #2c3e50;
+    font-size: 26px;
+    font-style: normal;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+.roboto-blue-h4 {
+    color: #2c3e50;
+    font-size: 19px;
+    font-style: normal;
+}
+
 
 /*Navigator*/
 
@@ -69,6 +96,7 @@ nav li a:hover {
     font-family: 'Titillium Web', sans-serif;
     text-align: center;
     right: 0;
+    color:#2c3e50;
     font-size: 100px;
     top: 300px;
 }
@@ -77,8 +105,8 @@ nav li a:hover {
     position: absolute;
     width: 100%;
     height: auto;
+    color:#2c3e50;
     text-align: center;
-    font-family: 'Lato', sans-serif;
     font-size: 60px;
     top: 700px;
 }
@@ -99,20 +127,6 @@ nav li a:hover {
 
 /*About*/
 
-#about h2 {
-    color: #2c3e50;
-    text-align: center;
-    font-family: 'Lato', sans-serif;
-}
-
-#about h3 {
-    font-family: 'Titillium Web', sans-serif;
-}
-
-#about h4 {
-    font-family: 'Roboto Slab', serif;
-}
-
 #face {
     border-radius: 300px;
     width: 252px;
@@ -125,12 +139,6 @@ nav li a:hover {
     background-color: black;
     height: 325px;
     width: 100%;
-}
-
-#get-in-touch h2 {
-    padding-top: 100px;
-    font-family: 'Titillium Web', sans-serif;
-    color: #cccccc;
 }
 
 span {
@@ -157,15 +165,7 @@ button:hover {
     border: 3px solid;
 }
 
-button span {
-    font-family: 'Lato', sans-serif;
-}
-
 /*Skills*/
-
-#skills h2{
-        font-family: 'Lato', sans-serif;
-}
 
 .skills {
     display: inline-block;
@@ -180,20 +180,17 @@ button span {
 }
 
 .skills p {
-    font-family: 'Lato', sans-serif;
+     text-align: center;
     font-size: 20px;
-    text-align: center;
+    color: #2c3e50;
+    font-style: normal;
+    font-family: 'Lato', sans-serif;
 }
 
 /*Process*/
 
 #process {
     background-color: black;
-}
-
-#process h2 {
-    font-family: 'Titillium Web', sans-serif;
-    color: #cccccc;
 }
 
 #process img {
@@ -203,19 +200,6 @@ button span {
 
 /*Education*/
 
-#education h2 {
-    font-family: 'Lato', sans-serif;
-}
-
-#education h3,
-#education h4 {
-    font-family: 'Titillium Web', sans-serif;
-}
-
-#education h5 {
-    font-family: 'Roboto Slab', serif;
-
-}
 
 /*Certificate*/
 
@@ -223,13 +207,13 @@ button span {
     background-color: black;
 }
 
-#certificate h2,
 #certificate h3,
 #certificate h4,
 #certificate h5 {
-    font-family: 'Titillium Web', sans-serif;
-    color: #cccccc;
     text-align: center;
+    color: #ffffff;
+    font-style: normal;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 #certificate img {
@@ -244,10 +228,6 @@ button span {
 }
 
 /*Portfolio*/
-
-#portfolio h2 {
-    font-family: 'Lato', sans-serif;
-}
 
 #portfolio div {
     display: inline-block;
@@ -268,10 +248,6 @@ button span {
 
 }
 
-#contact h2 {
-    color: #cccccc;
-    font-family: 'Lato', sans-serif;
-}
 
 input,
 textarea {
@@ -304,7 +280,7 @@ textarea {
     border: 3px solid;
 }
 
-#map img{
+#map img {
     width: 100%;
     height: 400px;
 }
