--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@ html,
 body {
     width: 100%;
     height: 100%;
-    background: #ebebeb;
+    background: #f2f2f2;
 }
 
 body {
@@ -19,6 +19,13 @@ body {
 .titilium-white-h2 {
     text-align: center;
     font-size: 38px;
+    color: #ffffff;
+    font-style: normal;
+    font-family: 'Titillium Web', sans-serif;
+}
+.titilium-white-h3 {
+    text-align: center;
+    font-size: 26px;
     color: #ffffff;
     font-style: normal;
     font-family: 'Titillium Web', sans-serif;
@@ -54,7 +61,7 @@ nav {
     left: 0;
     height: 70px;
     width: 100%;
-    background-color: #171217;
+    background-color: #2c3e50;
     z-index: 10;
 }
 
@@ -77,7 +84,7 @@ nav li a {
 }
 
 nav li a:hover {
-    color: #ebebeb;
+    color: white;
 }
 
 /*Background-foto*/
@@ -136,7 +143,7 @@ nav li a:hover {
 /*LET'S TALK ABOUT YOUR NEW PROJECT*/
 
 #get-in-touch {
-    background-color: black;
+    background-color: #2c3e50;
     height: 325px;
     width: 100%;
 }
@@ -146,22 +153,22 @@ span {
 }
 
 button {
-    border-color: #cccccc;
+    border-color: #f2f2f2;
     padding: 18px 27px;
     font-size: 19px;
-    color: #cccccc;
+    color: white;
     border-radius: 0px;
-    background: black;
+    background: #2c3e50;
     border: 3px solid
 }
 
 button:hover {
-    border-color: black;
+    border-color: #f2f2f2;
     padding: 18px 27px;
     font-size: 19px;
-    color: black;
+    color: #2c3e50;
     border-radius: 0px;
-    background: #cccccc;
+    background: #f2f2f2;
     border: 3px solid;
 }
 
@@ -190,7 +197,7 @@ button:hover {
 /*Process*/
 
 #process {
-    background-color: black;
+    background-color:  #2c3e50;
 }
 
 #process img {
@@ -204,7 +211,7 @@ button:hover {
 /*Certificate*/
 
 #certificate {
-    background-color: black;
+    background-color:  #2c3e50;
 }
 
 #certificate h3,
@@ -244,7 +251,7 @@ button:hover {
 /*Contact*/
 
 #contact {
-    background-color: black;
+    background-color:  #2c3e50;
 
 }
 
@@ -252,31 +259,31 @@ button:hover {
 input,
 textarea {
     outline: 0;
-    border-color: black;
+    border: none;
     padding: 18px 27px;
     font-size: 19px;
-    color: #cccccc;
+    color: #f2f2f2;
     border-radius: 0px;
-    background: black;
+    background: #2c3e50;
 }
 
 [type="submit"]:hover {
-    border-color: black;
+    border-color: #f2f2f2;
     padding: 18px 27px;
     font-size: 19px;
-    color: black;
+    color: white;
     border-radius: 0px;
-    background: white;
-    border: 3px solid;
+    background: #2c3e50;
+    border: 3px solid
 }
 
 [type="submit"] {
-    border-color: #cccccc;
+     border-color: #f2f2f2;
     padding: 18px 27px;
     font-size: 19px;
-    color: #cccccc;
+    color: #2c3e50;
     border-radius: 0px;
-    background: black;
+    background: #f2f2f2;
     border: 3px solid;
 }
 
