--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,7 @@ body {
     font-family: 'Titillium Web', sans-serif;
 }
 
-.roboto-blue-h4 {
+.roboto-blue{
     color: #2c3e50;
     font-size: 19px;
     font-style: normal;
@@ -118,7 +118,7 @@ nav li a:hover {
     top: 700px;
 }
 
-#background-social {
+#social-icons {
     position: absolute;
     top: 800px;
     left: 50%;
@@ -152,7 +152,19 @@ span {
     font-family: 'Lato', sans-serif;
 }
 
-button {
+
+.button{
+     display: block;
+    width: 115px;
+    height: 70px;
+    background: #4E9CAF;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+}
+/*.button {
     border-color: #f2f2f2;
     padding: 18px 27px;
     font-size: 19px;
@@ -162,7 +174,7 @@ button {
     border: 3px solid
 }
 
-button:hover {
+.button:hover {
     border-color: #f2f2f2;
     padding: 18px 27px;
     font-size: 19px;
@@ -170,7 +182,7 @@ button:hover {
     border-radius: 0px;
     background: #f2f2f2;
     border: 3px solid;
-}
+}*/
 
 /*Skills*/
 
