--- a/css/index.css
+++ b/css/index.css
@@ -164,7 +164,7 @@ span {
     color: white;
     font-weight: bold;
 }
-/*.button {
+.button {
     border-color: #f2f2f2;
     padding: 18px 27px;
     font-size: 19px;
