--- a/css/style.css
+++ b/css/style.css
@@ -1,161 +1,28 @@
+@import url('../css/part/nav.css');
+@import url('../css/part/home.css');
+@import url('../css/part/about.css');
+@import url('../css/part/get-in-touch.css');
+@import url('../css/part/skills.css');
+@import url('../css/part/font.css');
+@import url('../css/google-fonts.css');
+
 * {
     margin: 0;
     padding: 0;
 }
 
-
 body {
     max-width: 1100px;
     margin: 0 auto;
-    background: #f2f2f2;
 }
-
-/*Font*/
-
-.titilium-white-h2 {
-    text-align: center;
-    font-size: 38px;
-    color: #ffffff;
-    font-style: normal;
-    font-family: 'Titillium Web', sans-serif;
-}
-
-.titilium-white-h3 {
-    text-align: center;
-    font-size: 26px;
-    color: #ffffff;
-    font-style: normal;
-    font-family: 'Titillium Web', sans-serif;
-}
-
-.lato-blue-h2 {
-    text-align: center;
-    font-size: 45px;
-    color: #2c3e50;
-    font-style: normal;
-    font-family: 'Lato', sans-serif;
-}
-
-.titilium-blue-h3 {
-    color: #2c3e50;
-    font-size: 26px;
-    font-style: normal;
-    font-family: 'Titillium Web', sans-serif;
-}
-
-.roboto-blue {
-    color: #2c3e50;
-    font-size: 19px;
-    font-style: normal;
-}
-
-/*Navigator*/
-
-header {
-    position: fixed;
-
-}
-
-nav {
-
-    top: 0;
-    left: 0;
-    height: 71px;
-    width: 1100px;
-    margin: 0 auto;
-    background-color: black;
-    z-index: 10;
-}
-
-nav ul {
-    display: flex;
-    justify-content: space-around;
-    list-style: none;
-    padding: 20px 0;
-
-}
-
-nav li a {
-    font-size: 20px;
-    font-weight: bold;
-    text-decoration: none;
-    font-family: 'Titillium Web', sans-serif;
-    color: #cccccc;
-    text-shadow: 0 1px 0 gray;
-}
-
-nav li a:hover {
-    color: white;
-}
-
-/*Background*/
 
 #home::before {
     content: ' ';
     width: 100%;
     height: 700px;
-    background-image: url(http://i.piccy.info/i9/aa2df8c26b67e229c0062747395589c1/1503425572/274118/1173500/background_1_.jpg);
+    background-image: url(../img/background.png);
     background-position: center;
     opacity: 0.6;
     z-index: -10;
     margin-top: 71px;
-}
-
-#home {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#home h1 {
-    margin-top: -600px;
-    font-family: 'Titillium Web', sans-serif;
-    text-align: center;
-    color: black;
-    font-size: 70px;
-}
-
-#home h2 {
-    font-style: normal;
-    font-family: 'Lato', sans-serif;
-    margin-top: 130px;
-    color: black;
-    text-align: center;
-    font-size: 40px;
-}
-
-#social-icons {
-    margin-top: 40px;
-}
-
-.social-icons {
-    width: 50px;
-    height: 50px;
-    opacity: 0.8;
-    margin: 10px;
-}
-
-.social-icons:hover {
-    opacity: 1;
-}
-
-/*About*/
-
-#about>div {
-    margin-top: 220px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-#about-left-column>div,
-#about-right-column>div {
-    display: flex;
-    justify-content: space-between;
-}
-
-#face {
-    border-radius: 300px;
-    height: 400px;
-    width: 400px;
 }
