--- a/css/part/font.css
+++ b/css/part/font.css
@@ -1,7 +1,7 @@
 .titilium-white-h2 {
     text-align: center;
     font-size: 38px;
-    color: #ffffff;
+    color: #f2f2f2;
     font-style: normal;
     font-family: 'Titillium Web', sans-serif;
 }
@@ -9,7 +9,7 @@
 .titilium-white-h3 {
     text-align: center;
     font-size: 26px;
-    color: #ffffff;
+    color: #f2f2f2;
     font-style: normal;
     font-family: 'Titillium Web', sans-serif;
 }
