--- a/css/part/about.css
+++ b/css/part/about.css
@@ -2,7 +2,7 @@
     margin-top: 200px;
     background-color: #f2f2f2;
     height: 500px;
-    padding: 70px 0 0 0;
+    padding: 70px 0 40px 0;
 }
 
 #about>div {
