--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,12 @@
 @import url('../css/part/about.css');
 @import url('../css/part/get-in-touch.css');
 @import url('../css/part/skills.css');
+@import url('../css/part/education.css');
+@import url('../css/part/certificate.css');
+@import url('../css/part/portfolio-form.css');
 @import url('../css/part/font.css');
 @import url('../css/google-fonts.css');
+
 
 * {
     margin: 0;
@@ -32,9 +36,15 @@ body {
 
 #process {
     background-color:  black;
+    padding: 70px 0 20px 0;
 }
 
 #process img {
     width: 100%;
     height: auto;
+}
+
+#map img {
+    width: 100%;
+    height: 400px;
 }
