--- a/css/part/about.css
+++ b/css/part/about.css
@@ -1,7 +1,7 @@
 #about {
     margin-top: 200px;
     background-color: #f2f2f2;
-    height: 500px;
+    height: auto;
     padding: 70px 0 40px 0;
 }
 
@@ -22,6 +22,7 @@
 #about-left-column,
 #about-right-column {
     width: 320px;
+    height: 320px;
 }
 
 #about-left-column>div,
@@ -44,4 +45,17 @@ aside>div>div>p {
     border-radius: 300px;
     height: 350px;
     width: 350px;
+}
+
+
+@media (max-width: 460px) {
+    #about>div {
+        margin-top: 80px;
+        display: flex;
+        flex-direction:column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+
 }
