--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,3 @@
-@import url('../css/part/nav.css');
-@import url('../css/part/home.css');
-@import url('../css/part/about.css');
-@import url('../css/part/get-in-touch.css');
-@import url('../css/part/skills.css');
-@import url('../css/part/education.css');
-@import url('../css/part/certificate.css');
-@import url('../css/part/portfolio-form.css');
-@import url('../css/part/font.css');
-@import url('../css/google-fonts.css');
-
-
 * {
     margin: 0;
     padding: 0;
@@ -35,7 +23,7 @@ body {
 /*process*/
 
 #process {
-    background-color:  black;
+    background-color: black;
     padding: 70px 0 20px 0;
 }
 
@@ -44,7 +32,8 @@ body {
     height: auto;
 }
 
-#map img {
+#map iframe {
     width: 100%;
     height: 400px;
+    border: 0
 }
