--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url('../css/style2.css');
+@import url('../css/style.css');
 @import url('../css/part/nav.css');
 @import url('../css/part/home.css');
 @import url('../css/part/about.css');
