--- a/css/part/about.css
+++ b/css/part/about.css
@@ -48,7 +48,7 @@ aside>div>div>p {
 }
 
 
-@media (max-width: 460px) {
+@media screen and (max-width: 460px) {
     #about>div {
         margin-top: 80px;
         display: flex;
@@ -57,5 +57,10 @@ aside>div>div>p {
         justify-content: space-between;
         align-items: center;
     }
+#face {
+    border-radius: 300px;
+    height: 300px;
+    width: 300px;
+}
 
 }
