--- a/css/part/education.css
+++ b/css/part/education.css
@@ -8,3 +8,10 @@
     justify-content: space-between;
     margin: 50px 100px;
 }
+@media screen and (max-width: 500px) {
+    #education > div > div {
+        margin: 50px auto;
+       
+    }
+
+}
