--- a/css/part/nav.css
+++ b/css/part/nav.css
@@ -1,25 +1,28 @@
 header {
     position: fixed;
+     top: 0;
+    left: 0;
     z-index: 10;
-    width: 1100px;
+    width: 100%;
 }
 
 nav {
-    top: 0;
-    left: 0;
+   
     height: 71px;
     margin: 0 auto;
     background-color: black;
 }
 
 nav ul {
+    width: 1100px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-around;
     list-style: none;
     padding: 20px 0;
 }
 
-nav li a {
+nav ul li a {
     font-size: 20px;
     font-weight: bold;
     text-decoration: none;
@@ -28,6 +31,6 @@ nav li a {
     text-shadow: 0 1px 0 gray;
 }
 
-nav li a:hover {
+nav ul li a:hover {
     color: white;
 }
