--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-body {
+html {
     max-width: 1100px;
     margin: 0 auto;
 }
@@ -18,9 +18,6 @@ body {
     z-index: -10;
     margin-top: 71px;
 }
-
-
-/*process*/
 
 #process {
     background-color: black;
