--- a/css/part/get-in-touch.css
+++ b/css/part/get-in-touch.css
@@ -31,3 +31,12 @@
     background: #f2f2f2;
     border: 3px solid;
 }
+
+@media screen and (max-width: 340px) {
+    #get-in-touch>h2 {
+        padding: 30px 0 0 0;
+        font-size: 30px;
+    }
+
+
+}
