--- a/css/part/home.css
+++ b/css/part/home.css
@@ -19,19 +19,33 @@
     color: black;
     text-align: center;
     font-size: 40px;
+    margin-bottom: -48px;
 }
 
 #social-icons {
-    margin-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 78px;
+    justify-content:space-around;
+    margin-bottom: -74px;
 }
 
 .social-icons {
     width: 50px;
     height: 50px;
     opacity: 0.6;
-    margin: 10px;
+    margin: 10px 10px 10px 10px;
 }
 
 .social-icons:hover {
     opacity: 1;
+}
+
+
+@media screen and (max-width: 430px) {
+#social-icons {
+   margin-bottom: -128px;
+}
+    
+    
 }
