--- a/css/part/nav.css
+++ b/css/part/nav.css
@@ -10,11 +10,13 @@ nav {
 
     height: 71px;
     margin: 0 auto;
-    background-color: black;
 }
 
 nav ul {
-    width: 1100px;
+        background-color: black;
+
+    width: 100%;
+    max-width: 1100px;
     margin: 0 auto;
     display: flex;
     justify-content: space-around;
