--- a/css/part/font.css
+++ b/css/part/font.css
@@ -30,7 +30,8 @@
 }
 
 .roboto-blue {
+    font-family: 'Roboto Slab', serif;
     color: #2c3e50;
-    font-size: 19px;
+    font-size: 16px;
     font-style: normal;
 }
