--- a/css/part/get-in-touch.css
+++ b/css/part/get-in-touch.css
@@ -8,7 +8,7 @@
 }
 
 #get-in-touch>h2 {
-    padding: 60px 0 0 0;
+    padding: 60px 10px 0 10px;
 }
 
 #get-in-touch>form>input {
@@ -32,9 +32,9 @@
     border: 3px solid;
 }
 
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 440px) {
     #get-in-touch>h2 {
-        padding: 30px 0 0 0;
+        padding: 30px 10px 0 10px;
         font-size: 30px;
     }
 
