--- a/css/part/skills.css
+++ b/css/part/skills.css
@@ -16,11 +16,14 @@
 
 div.skills {
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 div.skills>img {
-    width: 128px;
-    height: 128px;
+    max-width: 100px;
+    max-height: 100px;
 }
 
 .skills p {
@@ -29,4 +32,21 @@ div.skills>img {
     font-size: 30px;
     color: #2c3e50;
     font-family: 'Lato', sans-serif;
+}
+
+@media screen and (max-width: 440px) {
+    .skills p {
+        font-size: 20px;
+    }
+    div.skills>img {
+        max-width: 80px;
+        max-height: 80px;
+    }
+}
+
+@media screen and (max-width: 870px) {
+    div.skills {
+        padding: 2% 5%;
+
+    }
 }
