--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,422 @@
-@import url('../css/style.css');
 @import url('../css/part/nav.css');
-@import url('../css/part/home.css');
-@import url('../css/part/about.css');
-@import url('../css/part/get-in-touch.css');
-@import url('../css/part/skills.css');
-@import url('../css/part/education.css');
-@import url('../css/part/certificate.css');
-@import url('../css/part/portfolio-form.css');
 @import url('../css/part/font.css');
-@import url('../css/google-fonts.css');
+@import url('../css/part/google-fonts.css');
+@import url('../css/part/glass.css');
+
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+#home::before {
+    content: ' ';
+    width: 100%;
+    height: 700px;
+    background-image: url(../img/background.png);
+    background-position: center;
+    opacity: 0.6;
+    z-index: -10;
+    margin-top: 71px;
+}
+
+#home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#home h1 {
+    margin-top: -600px;
+    font-family: 'Titillium Web', sans-serif;
+    text-align: center;
+    color: black;
+    font-size: 60px;
+}
+
+#home h2 {
+    font-style: normal;
+    font-family: 'Lato', sans-serif;
+    margin-top: 150px;
+    color: black;
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: -48px;
+}
+
+#social-icons {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 78px;
+    justify-content: space-around;
+    margin-bottom: -74px;
+}
+
+.social-icons {
+    width: 50px;
+    height: 50px;
+    opacity: 0.6;
+    margin: 10px 10px 10px 10px;
+}
+
+.social-icons:hover {
+    opacity: 1;
+}
+
+@media screen and (max-width: 430px) {
+    #social-icons {
+        margin-bottom: -128px;
+    }
+}
+
+#about {
+    margin-top: 200px;
+    background-color: #f2f2f2;
+    height: auto;
+    padding: 70px 0 40px 0;
+}
+
+#about>div {
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    height: 64px;
+    width: 64px;
+    margin: 8.5px 0;
+}
+
+#about-left-column,
+#about-right-column,
+#face {
+    width: 290px;
+    height: 290px;
+}
+
+#about-left-column>div,
+#about-right-column>div {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 20px;
+}
+
+aside>div>div>p {
+    margin: 7px;
+}
+
+#about-right-column>div>div>p {
+    text-align: right;
+
+}
+
+@media screen and (max-width: 890px) {
+    #about>div {
+        margin-top: 80px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    #about>div {
+        margin-top: 80px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+    #face {
+        height: 300px;
+        width: 300px;
+    }
+
+}
+
+
+#get-in-touch {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    height: 300px;
+}
+
+#get-in-touch>h2 {
+    padding: 60px 10px 0 10px;
+}
+
+#get-in-touch>form>input {
+    margin-top: 50px;
+    border-color: #f2f2f2;
+    padding: 18px 27px;
+    font-size: 19px;
+    color: white;
+    border-radius: 0px;
+    background: black;
+    border: 3px solid
+}
+
+#get-in-touch>form>input:hover {
+    border-color: black;
+    padding: 18px 27px;
+    font-size: 19px;
+    color: black;
+    border-radius: 0px;
+    background: #f2f2f2;
+    border: 3px solid;
+}
+
+@media screen and (max-width: 440px) {
+    #get-in-touch>h2 {
+        padding: 30px 10px 0 10px;
+        font-size: 30px;
+    }
+}
+
+
+#skills {
+    background-color: #f2f2f2;
+    padding-bottom: 80px;
+}
+
+#skills>div {
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+#skills>h2 {
+    padding: 70px 0 40px 0;
+}
+
+div.skills {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+div.skills>img {
+    max-width: 100px;
+    max-height: 100px;
+}
+
+.skills p {
+    text-align: center;
+    margin-top: 17px;
+    font-size: 30px;
+    color: #2c3e50;
+    font-family: 'Lato', sans-serif;
+}
+
+@media screen and (max-width: 440px) {
+    .skills p {
+        font-size: 20px;
+    }
+    div.skills>img {
+        max-width: 80px;
+        max-height: 80px;
+    }
+}
+
+@media screen and (max-width: 870px) {
+    div.skills {
+        padding: 2% 5%;
+
+    }
+}
+
+
+#process {
+    background-color: black;
+    padding: 70px 0 20px 0;
+}
+
+#process img {
+    width: 100%;
+    height: auto;
+}
+
+#education {
+    padding: 70px 0 40px 0;
+    background-color: #f2f2f2;
+}
+
+#education>h2 {
+    margin-bottom: 50px;
+}
+
+#education>div>div {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 3% 7%;
+}
+
+#education>div>div>div {
+    width: 60%;
+}
+
+#education>div>div>p {
+    width: 40%;
+    min-width: 240px;
+    text-align: right;
+}
+
+@media screen and (max-width: 697px) {
+    #education>div>div>div {
+        width: 100%;
+    }
+
+    #education>div>div>p {
+        min-width: 240px;
+        text-align: left;
+    }
+}
+
+
+#certificate {
+    background-color: black;
+    padding: 70px 0 40px;
+}
+
+#certificate h2 {
+    margin: 0 0 40px 0;
+}
+
+#certificate img {
+    width: 70%;
+    margin: 0 auto;
+}
+
+#portfolio {
+    background-color: #f2f2f2;
+    padding: 70px 0 40px 0;
+}
+
+#portfolio>h2 {
+    padding: 0 0 40px 0;
+}
+
+#portfolio>div {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#portfolio>div>img {
+    max-height: 300px;
+    margin: 20px 0;
+}
+
+.zoom-in {
+    border: 0;
+    position: relative;
+    transition: all 200ms ease-in;
+    transform: scale(1);
+}
+
+.zoom-in:hover {
+    z-index: 2;
+    transition: all 200ms ease-in;
+    transform: scale(1.3);
+}
+
+.shadow:hover {
+    box-shadow: 0px 0px 50px #000000;
+}
+
+@media screen and (max-width: 550px) {
+    #portfolio>div>img {
+        max-width: 280px;
+        margin: 20px 0;
+    }
+}
+
+@media screen and (max-width: 370px) {
+    .zoom-in:hover {
+        transition: all 200ms ease-in;
+        transform: scale(1.1);
+    }
+}
+
+
+#contact {
+    background-color: black;
+    padding: 70px 0 40px 0;
+}
+
+#form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+div#contact>h3.titilium-white-h3 {
+    margin: 0 0 50px 0;
+}
+
+input::placeholder,
+textarea::placeholder {
+    color: #f2f2f2;
+    opacity: 0.7;
+    text-align: left;
+}
+
+#form-name,
+#form-email,
+#form-message {
+    outline: 0;
+    border-width: 0 0 2px 0;
+    width: 35%;
+    min-width: 300px;
+    margin: 10px;
+    padding: 18px 27px;
+    font-size: 19px;
+    color: white;
+    border-radius: 0px;
+    background: black;
+}
+
+[type="submit"]:hover {
+    border-color: black;
+    padding: 18px 27px;
+    font-size: 19px;
+    color: black;
+    border-radius: 0px;
+    background: #f2f2f2;
+    border: 3px solid
+}
+
+[type="submit"] {
+    display: flex;
+    margin: 0 auto;
+    border-color: #f2f2f2;
+    padding: 18px 27px;
+    font-size: 19px;
+    color: #f2f2f2;
+    border-radius: 0px;
+    background: black;
+    border: 3px solid;
+}
+
+#map iframe {
+    width: 100%;
+    height: 400px;
+    border: 0
+}
