--- a/css/part/glass.css
+++ b/css/part/glass.css
@@ -29,7 +29,8 @@
 
 .infos_bloc a.content span {
     background: #2c3e50;
-    width:100%;
+    width:70%;
+    margin: 0 15%;
     height:0px;
     color: #2c3e50;
     text-transform:uppercase;
