--- a/z-in-case/certificate.css
+++ b/z-in-case/certificate.css
@@ -9,7 +9,7 @@
 
 
 #certificate img {
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
 }
 
@@ -42,7 +42,7 @@ textarea::placeholder {
 #form-email,
 #form-message {
     outline: 0;
-    border: 2px solid #f2f2f2;
+    border-width: 0 0 2px 0;
     width: 35%;
     min-width: 300px;
     margin: 10px;
