--- a/css/index.css
+++ b/css/index.css
@@ -75,7 +75,7 @@ html {
 }
 
 #about {
-    margin-top: 200px;
+    margin-top: 300px;
     background-color: #f2f2f2;
     height: auto;
     padding: 70px 0 40px 0;
@@ -418,5 +418,5 @@ textarea::placeholder {
 #map iframe {
     width: 100%;
     height: 400px;
-    border: 0
+    border: 0;
 }
