--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,6 @@
 @import url('../css/part/google-fonts.css');
 @import url('../css/part/glass.css');
 
-
 * {
     margin: 0;
     padding: 0;
@@ -18,7 +17,7 @@ html {
     content: ' ';
     width: 100%;
     height: 700px;
-    background-image: url(../img/background.png);
+    background-image: url(../img/background.jpg);
     background-position: center;
     opacity: 0.6;
     z-index: -10;
@@ -339,6 +338,8 @@ div.skills>img {
 
 .shadow:hover {
     box-shadow: 0px 0px 50px #000000;
+        margin:0 auto;
+
 }
 
 @media screen and (max-width: 550px) {
